# open-data-parser

./: LICENSE  README.md  mypy.ini  pyproject.toml
.github/: app.yml
.github/workflows/: app.yml  testing.yml
data/: meta.json
data/iryokikan/: iryokikan.json
data/kosodate-map/: gakku.json  hoikuen.json  kodomo-shokudo.json  korituhoikusyoitiran.json  kouminkan.json  ninteikodomoenitiran.json  sirituhoikusyoitiran.json  syokibohoikuichiran.json
geodata/: csv2json.py  utils.py
geodata/projects/kosodate-map/: 一時保育.csv  保育園.json  児童ホーム.csv  児童ホーム.json  子育て支援センター.csv  家庭的保育者.csv  小規模保育事業所.csv  幼稚園.json  病児・病後児保育.csv  病児・病後児保育.json  認可外保育施設.json  認定こども園.csv  認証保育所.json
input/: meta.yml
input/iryokikan/: README.md  iryokikan.csv
input/kosodate-map/: hoikuen.csv  hoikuen.xlsx  kouminkan.csv  保育園情報（公開情報加工）.csv
input/kosodate-map/polygon-gakku/: A27-10_12-g_SchoolDistrict.dbf  A27-10_12-g_SchoolDistrict.shx  A27-16_12.dbf
input/masterdata/: hoikuen.json
open_data_parser/: downloader.py  formatter.py  logger.py  main.py  scraper_and_geocode.py  transformer.py  utils.py  writer.py
open_data_parser/formatter/: points.py
open_data_parser/projects/kosodate-map/: 一時保育.json  保育園.csv  子育て支援センター.json  家庭的保育者.json  小規模保育事業所.json  幼稚園.csv  認可外保育施設.csv  認定こども園.json  認証保育所.csv
tests/: test_downloader.py
tests/open_data_parser/: test_downloader.py  test_formatter.py  test_transformer.py
