[tool.poetry]
name = "open_data_parser"
version = "0.1.0"
description = ""
authors = ["code-for-funabashi"]

[tool.poetry.dependencies]
python = "^3.8"
googlemaps = "^4.4.5"
pyshp = "^2.1.3"

[tool.poetry.dev-dependencies]
pylint = "^2.8.2"
mypy = "^0.812"
black = "^21.4b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
